# asteroids_3d

./: .gitignore  CMakeLists.txt  asteroid.mtl  build_script  debris.mtl  game.cc  game.h  game_test.cc  geometry.cc  geometry.h  geometry.tcc  geometry_test.cc  main_game.cc  math.cc  math.h  math.tcc  math_test.cc  matrix.tcc  matrix_test.cc  opengl_renderer.cc  opengl_renderer.h  physics.h  physics.tcc  physics_test.cc  saucer.mtl  sdl2_game_controller.cc  sdl2_game_controller.h  sdl2_renderer.cc  sdl2_renderer.h  sound.h  spaceship.mtl  spaceship_boost.mtl  timer.cc  timer.h  torpedo.mtl  viewer.cc  wavefront.cc  wavefront_test.cc
